<resources>
    <string name="app_name">Insight Companion</string>
    <string name="chatwithyourBot">Chat with your bot</string>
    <string name="chatwithBot">Chat with bot</string>
    <string name="myBot">My Bot</string>
    <string name="title">EVA AI</string>
    <string name="upgrade">Upgrade</string>
    <string name="about">About</string>
    <string name="myBots">My Bots</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="terms">Terms</string>
    <string name="termsLink"><![CDATA[Accept terms and privacy]]></string>
    <string name="termsPrivacyMessage"><![CDATA[Please enter your date of birth and accept our terms of service and privacy policy.]]></string>
    <string name="acceptTermsAndPrivacy">Accept terms and privacy</string>
    <string name="termsVerification">Terms verification</string>
    <string name="acceptTermsError">Must accept terms to use this app.</string>
    <string name="editEmail">Verify Email</string>
    <string name="userFriends">Friends</string>
    <string name="sendMessage">Send Message</string>
    <string name="addFriends">Add Friend</string>
    <string name="userAvatar">Avatar</string>
    <string name="userVoice">Voice</string>
    <string name="userFollowers">Followers</string>
    <string name="userMessages">Messages</string>
    <string name="newMessage">New Message</string>
    <string name="viewMessages">View Messages</string>
    <string name="browseUsers">Browse Users</string>
    <string name="browseBots">Browse Bots</string>
    <string name="browseTagUsers">Tag Users</string>
    <string name="userTags">Tags</string>
    <string name="hintUserId">Enter user id</string>
    <string name="hintWriteSubject">Enter subject</string>
    <string name="hintWriteMesssage">Text message</string>
    <string name="ageVerification">Terms Verification</string>
    <string name="emptyAgeField">Date of birth cannot be empty.</string>
    <string name="ageFormatError">Invalid date of birth. Date of birth must be in a format yyyy-mm-dd.</string>
    <string name="illegalAge">User must be over 13 years old to use this app.</string>
    <string name="validAge">Please enter a valid date of birth.</string>
    <string name="emailVerification">Email Verification</string>
    <string name="enterEmailMessage">Please enter your email address.</string>
    <string name="dialogPasswordRequired">Enter password to delete account.</string>
    <string name="storagePermissionAccess">Permission denied to read your External storage.</string>
    <string name="voiceType">Type</string>
    <string name="custom">Custom</string>
    <string name="serverTypeVoice">Server Voice</string>
    <string name="deviceTypeVoice">Device Voice</string>
    <string name="deleteUserAccount">Delete Account</string>
    <string name="deleteAccountVerification">Delete User Account</string>
    <string name="passwordRequiredHint">Password required</string>
    <string name="emptyPasswordMessage">Password can not be empty.</string>
    <string name="dialogOkButton">OK</string>
    <string name="dialogCancelButton">CANCEL</string>
    <string name="dialogDeleteButton">DELETE</string>
    <string name="userAccess">User Access</string>
    <string name="resetPassword">Reset Password</string>
    <string name="toggleAvatar">Avatar</string>
    <string name="birthdayEditHint">Date of birth yyyy-mm-dd</string>
    <string name="accountExists">Or if you would like to create an account then click on sign up.</string>
    <string name="signOut">Sign Out</string>
    <string name="viewProfile">View Profile</string>
    <string name="editProfile">Edit Profile</string>
    <string name="changeIcon">Change Icon</string>
    <string name="edit">Edit</string>
    <string name="users">Users</string>
    <string name="editor">Editor</string>
    <string name="delete">Delete</string>
    <string name="channelBot">Channel Bot</string>
    <string name="adminConsole">Admin Console</string>
    <string name="voice">Voice</string>
    <string name="youSay">You say</string>
    <string name="categoires">Categories</string>
    <string name="upload">Upload</string>
    <string name="avatar">Avatar</string>
    <string name="speechRate">Speech Rate</string>
    <string name="voteUp">Vote Up</string>
    <string name="trainingChatLogs">Training/Chat Logs</string>
    <string name="source">Source</string>
    <string name="type">Type</string>
    <string name="scripts">Scripts</string>
    <string name="userID">User ID</string>
    <string name="learning">Learning</string>
    <string name="twitter">Twitter</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="upgradeToGold">Upgrade to Gold</string>
    <string name="save">Save</string>
    <string name="ViewPost">View Post</string>
    <string name="talking">Talking</string>
    <string name="uploadImage">Upload Image</string>
    <string name="name">Name</string>
    <string name="tagMedia">Tag Media</string>
    <string name="emotions">Emotions</string>
    <string name="userFlagged">This user has be flagged</string>
    <string name="upgradeToPlatinum">Upgrade to Platinum</string>
    <string name="test">Test</string>
    <string name="actions">Actions</string>
    <string name="thumbsDown">Thumbs Down</string>
    <string name="poses">Poses</string>
    <string name="sort">Sort</string>
    <string name="deviceVoice">Device Voice</string>
    <string name="browse">Browse</string>
    <string name="create">Create</string>
    <string name="compile">Compile</string>
    <string name="scriptEditor">Script Editor</string>
    <string name="chat">Chat</string>
    <string name="viewCreater">View Creator</string>
    <string name="webm">Webm</string>
    <string name="tags">Tags</string>
    <string name="websiteOptional">Website (optional)</string>
    <string name="topic">Topic</string>
    <string name="subdomain">Subdomain</string>
    <string name="viewReply">View Reply</string>
    <string name="thumbsUp">Thumbs Up</string>
    <string name="template">Template</string>
    <string name="thisIsATest">This is a test, testing 1, 2, 3</string>
    <string name="submit">Submit</string>
    <string name="upgradeText1">Upgrade your account for additional resources, features, and an ad free interface.\n\nYour bots may be archived or deleted if inactive for 3 months if you do not upgrade.</string>
    <string name="videoAccessMode">Video Access Mode</string>
    <string name="yourEmailAddress">Your email address</string>
    <string name="startWarText1">Select two bots to start a chat bot war. Who wins? You decide.</string>
    <string name="webmVideo">Webm Video</string>
    <string name="createAvatar">Create Avatar</string>
    <string name="botUsers">Bots</string>
    <string name="aPrivate">Private</string>
    <string name="hidden">Hidden</string>
    <string name="contentRating">Content Rating</string>
    <string name="createBot">Create Bot</string>
    <string name="createDomain">Create Workspace</string>
    <string name="createFourm">Create Journal</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="viewUser">View User</string>
    <string name="viewPrevious">View Previous</string>
    <string name="startWar">Start War</string>
    <string name="speak">Speak</string>
    <string name="userIDorEmail">User ID (or email)</string>
    <string name="unflag">Unflag</string>
    <string name="subscribe">Subscribe</string>
    <string name="synthesizeResponse">Synthesis Response</string>
    <string name="voteDown">Vote Down</string>
    <string name="wiktionary">Wiktionary</string>
    <string name="whisper">Whisper</string>
    <string name="upgradeToBronze">Upgrade to Bronze</string>
    <string name="viewNext">View Next</string>
    <string name="play">Play</string>
    <string name="select">Select</string>
    <string name="searchPosts">Search Posts</string>
    <string name="responseMatching">Response Matching</string>
    <string name="requiredPrevious">Required Previous</string>
    <string name="pitch">Pitch</string>
    <string name="responseTimeout">Response Timeout</string>
    <string name="ping">Ping</string>
    <string name="scriptFlagged">This script has been flagged</string>
    <string name="restrict">Restrict</string>
    <string name="search">Search</string>
    <string name="newPost">New Post</string>
    <string name="createGraphic">Create Graphic</string>
    <string name="reply">Reply</string>
    <string name="replyToParent">Reply to parent</string>
    <string name="createScript">Create Script</string>
    <string name="language">Language</string>
    <string name="showName">Show Name</string>
    <string name="editDomain">Edit Workspace</string>
    <string name="editForum">Edit Journal</string>
    <string name="editPost">Edit Post</string>
    <string name="featured">Featured</string>
    <string name="editGraphic">Edit Graphic</string>
    <string name="editUser">Edit Profile</string>
    <string name="fourmBot">Forum Bot</string>
    <string name="browsePosts">Browse Posts</string>
    <string name="download">Download</string>
    <string name="faq">FAQ</string>
    <string name="forum">Journal</string>
    <string name="helpBot">Help Bot</string>
    <string name="liveSupport">Live Support</string>
    <string name="email">Email</string>
    <string name="help">Help</string>
    <string name="emoting">Emoting</string>
    <string name="comprehension">Comprehension</string>
    <string name="consciousness">Consciousness</string>
    <string name="last">Last</string>
    <string name="customAvatar">Custom Avatar</string>
    <string name="noRepeat">No Repeat</string>
    <string name="showImages">Show Images</string>
    <string name="allPosts">All posts</string>
    <string name="myPosts">My posts</string>
    <string name="aUsers">Users</string>
    <string name="aPublic">Public</string>
    <string name="selectFirstBot">Select First Bot</string>
    <string name="sendFile">Send File</string>
    <string name="posts">Posts</string>
    <string name="pickFromWWW">Pick from: http://www.daz3d.com/people-and-wearables-genesis-3 \n(may require extra cost)</string>
    <string name="sendImage">Send Image</string>
    <string name="passwordHint">Password Hint (optional)</string>
    <string name="modelNameorURL">Model Name or URL</string>
    <string name="newPassword">New Password</string>
    <string name="hairStyle">Hair Style</string>
    <string name="hairColor">Hair Color</string>
    <string name="keepAlive">Keep Alive</string>
    <string name="graphics">Graphics</string>
    <string name="fullName">Full Name (optional)</string>
    <string name="bio">Bio (optional)</string>
    <string name="currentPassword">Current Password</string>
    <string name="face">Face</string>
    <string name="eyeColor">Eye Color</string>
    <string name="body">Body</string>
    <string name="cloths">Clothes</string>
    <string name="daz3DModelNameorURL">Daz3D Model Name or URL</string>
    <string name="comments">Comments</string>
    <string name="Forums">Journals</string>
    <string name="clear">Clear</string>
    <string name="channels">Channels</string>
    <string name="disableVideo">Disable Video</string>
    <string name="boot">Boot</string>
    <string name="userBot">Bot</string>
    <string name="liveChat">Live Chat</string>
    <string name="chatRoom">Chat Room</string>
    <string name="chatBotWars">Chat Bot Wars</string>
    <string name="changeLanguage">Change Language</string>
    <string name="exit">Exit</string>
    <string name="flagUser">Flag User</string>
    <string name="domains">Workspaces</string>
    <string name="bots">Bots</string>
    <string name="avatars">Avatars</string>
    <string name="pose">Pose</string>
    <string name="website">Website</string>
    <string name="accept">Accept</string>
    <string name="sound">Sound</string>
</resources>