<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menuUserMessages"
          android:title="@string/userMessages" />

    <item android:id="@+id/menuUserFriends"
          android:title="@string/userFriends" />

    <item android:id="@+id/menuSendMessage"
        android:title="@string/sendMessage" />

    <item android:id="@+id/menuAddFriend"
        android:title="@string/addFriends" />

    <item android:id="@+id/menuUserAvatar"
        android:title="@string/userAvatar" />

    <item android:id="@+id/menuUserVoice"
        android:title="@string/userVoice" />

    <item android:id="@+id/menuUserTags"
        android:title="@string/userTags" />

    <item android:id="@+id/menuUserBot"
        android:title="@string/userBot" />

    <item android:id="@+id/menuLiveChat"
        android:title="@string/liveChat" />

    <item android:id="@+id/menuChatRoom"
        android:title="@string/chatRoom" />
     
    <item android:id="@+id/menuChangeIcon"
          android:title="@string/changeIcon" />
    
    <item android:id="@+id/menuEditUser"
          android:title="@string/editUser" />

    <item android:id="@+id/menuVerifyEmail"
          android:title="@string/editEmail" />
    
    <item android:id="@+id/menuFlag"
          android:title="@string/flagUser" />

    <item android:id="@+id/deleteUserAccount"
          android:title="@string/deleteUserAccount" />
 
    <item android:id="@+id/menuBots"
          android:title="@string/bots" />
 
    <item android:id="@+id/menuChannels"
          android:title="@string/channels" />

    <item android:id="@+id/menuAvatars"
        android:title="@string/avatars" />
 
    <item android:id="@+id/menuForums"
          android:title="@string/Forums" />
 
    <item android:id="@+id/menuPosts"
          android:title="@string/posts" />
    
    <item android:id="@+id/menuGraphics"
          android:title="@string/graphics" />
 
    <item android:id="@+id/menuDomains"
          android:title="@string/domains" />
 
    <item android:id="@+id/website"
          android:title="@string/website" />
     
</menu>