<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
    	android:gravity="fill_horizontal"
		android:background="#eee">

		<Button
			style="@style/backButton" />

		<ImageView
	        android:id="@+id/icon"
	        android:layout_width="32sp"
	        android:layout_height="32sp"
	        android:layout_margin="4sp" />

		<TextView
			android:id="@+id/title"
			android:layout_width="0px"
			android:layout_height="wrap_content"
			android:layout_margin="4sp"
			android:layout_weight="1"
			android:text="@string/editUser"
			android:textSize="18sp" />
		
		<Button
			android:id="@+id/helpButton"
	        android:layout_width="32sp"
	        android:layout_height="32sp"
	        android:layout_margin="4sp"
	        android:background="@drawable/help"
			android:onClick="help"
			android:text="" />
		
	</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
		android:background="#ddd">
    </View>
    
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/currentPassword"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/newPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newPassword"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/hintText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordHint"
                android:imeOptions="actionDone"
                android:inputType="text" />

            <EditText
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullName"
                android:imeOptions="actionDone"
                android:inputType="text" />

            <CheckBox
                android:id="@+id/showNameCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/showName" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal" >

				<TextView
					android:id="@+id/accessModeLabel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="5dp"
					android:text="@string/userAccess" />

				<Spinner
					android:id="@+id/userAccessModeSpin"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" />

			</LinearLayout>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:orientation="horizontal" >

				<EditText
					android:id="@+id/userTagsText"
					android:layout_width="0px"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:hint="Tags"
					android:imeOptions="actionDone"
					android:inputType="text" />

				<ImageButton
					android:id="@+id/btnTag"
					style="?android:attr/buttonStyleSmall"
					android:layout_width="30sp"
					android:layout_height="30sp"
					android:layout_margin="4dp"
					android:background="#FFFFFF"
					android:scaleType="center"
					android:onClick="browseTags"
					android:src="@drawable/arrow_down_green" />

			</LinearLayout>

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:imeOptions="actionDone"
                android:inputType="text" />

            <EditText
                android:id="@+id/websiteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/website"
                android:imeOptions="actionDone"
                android:inputType="text" />

            <EditText
                android:id="@+id/bioText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:hint="@string/bio"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/ok_button"
                    android:onClick="save"
                    android:text="Save"
                    android:textColor="@color/white" />
            </LinearLayout>
            
        </LinearLayout>
        
    </ScrollView>

</LinearLayout>